# gweather-rs

./: .gitmodules  Cargo.toml  Gir.toml  generate.sh
src/: lib.rs
src/auto/: alias.rs  info.rs  location.rs  location_entry.rs  mod.rs  timezone_menu.rs
sys/: Cargo.toml  Gir.toml  build.rs
sys/src/: lib.rs
sys/tests/: abi.rs  constant.c  layout.c  manual.h
